--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
                 <configuration>
                     <relocations>
                         <relocation>
-                            <pattern>dev.triumphteam.gui</pattern>
-                            <shadedPattern>confusedalex.simpleuhc.gui</shadedPattern> <!-- Replace package here here -->
+                            <pattern>redempt.redlib</pattern>
+                            <shadedPattern>confusedalex.simpleuhc.redlib</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -67,10 +67,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
-            <repository>
-                <id>repo</id>
-                <url>https://repo.mattstudios.me/artifactory/public/</url>
-            </repository>
+        <repository>
+            <id>redempt.dev</id>
+            <url>https://redempt.dev</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -81,9 +81,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>dev.triumphteam</groupId>
-            <artifactId>triumph-gui</artifactId>
-            <version>3.1.1</version>
+            <groupId>com.github.Redempt</groupId>
+            <artifactId>RedLib</artifactId>
+            <version>master</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
